sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:10: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
			if (plusPetit(i+1:Int, i:Int) && swapped=true)
                                                      ^