sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {

	var swapped = true
	while(swapped)
	{
		
		for (i <- 0 to getNombreValeurs()-2)
		{
			if (plusPetit(i+1:Int, i:Int) && swapped=true)
			{
				echange(i:Int, i+1:Int)
				
			}
			swapped=false
			
		}
		
		

	
	}
}